seagger added in validate api handler
