# src/app/authentication/handlers/validateOtpHandler.go
@@ -3,10 +3,21 @@ package handlers
 import (
 	"Stock_broker_application/models"
 	"Stock_broker_application/service"
-	"github.com/gin-gonic/gin"
 	"net/http"
+
+	"github.com/gin-gonic/gin"
 )
 
+// @Summary Validate OTP
+// @Description Validates the OTP for a user
+// @Tags OTP
+// @Accept json
+// @Produce json
+// @Param otpRequest body models.OTPRequest true "OTP Request"
+// @Success 200 {object} string "OTP validated successfully"
+// @Failure 400 {object} string "Bad request"
+// @Failure 401 {object} string "OTP is expired or invalid"
+// @Router /validateotp [post]
 // ValidateOTPHandler handles the OTP validation request
 func ValidateOTPHandler(otpService *service.OTPService) gin.HandlerFunc {
 	return func(c *gin.Context) {
